objects/Onboarding__c.object
<CustomObject>
    <fields>
        <fullName>AM_CSN__c</fullName>
        <formula>TEXT(Account_Name__r.AM_CSN__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM - CSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Event__c</fullName>
        <formula>TEXT(Account_Name__r.AM_Event__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM - Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Survey__c</fullName>
        <formula>TEXT( Account_Name__r.AM_Survey__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM - Survey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Tier__c</fullName>
        <formula>Account_Name__r.SR_Commited_Current_Term_c__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Committed (#)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>API_Integration_with__c</fullName>
        <label>API Integration with</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API__c</fullName>
        <label>API</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ARI_Integration_Other__c</fullName>
        <label>ARI Integration Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARI_Integration__c</fullName>
        <label>ARI Integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>IDeaS</fullName>
                </value>
                <value>
                    <fullName>TravelClick</fullName>
                </value>
                <value>
                    <fullName>EasyRMS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>CRS</fullName>
                </value>
                <value>
                    <fullName>Delphi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_c_Sourcing_Status__c</fullName>
        <formula>TEXT( Account_Name__r.CSN_P_Account_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A/c Sourcing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Assignment_Value__c</fullName>
        <formula>Account_Name__r.Account_Assignment_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ Account Assignment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Management_Tier__c</fullName>
        <formula>TEXT( Account_Name__r.Account_Management_Tier__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Management Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_id__c</fullName>
        <formula>CASESAFEID(Account_Name__r.Id)</formula>
        <label>Account id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Launch_Date__c</fullName>
        <label>Actual Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admin_usernames_and_Passwords_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin usernames and Passwords created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Name</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assets_approved_date__c</fullName>
        <label>Assets approved date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attributes__c</fullName>
        <label>Attributes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affinity</fullName>
                </value>
                <value>
                    <fullName>App Build Plus</fullName>
                </value>
                <value>
                    <fullName>CC Directory</fullName>
                </value>
                <value>
                    <fullName>Click</fullName>
                </value>
                <value>
                    <fullName>Client Directory</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Graphics Work</fullName>
                </value>
                <value>
                    <fullName>Lead Retrieval</fullName>
                </value>
                <value>
                    <fullName>New Client</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Polling</fullName>
                </value>
                <value>
                    <fullName>Repeat Client</fullName>
                </value>
                <value>
                    <fullName>Reseller Acct</fullName>
                </value>
                <value>
                    <fullName>Self-Service</fullName>
                </value>
                <value>
                    <fullName>SocialWall</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed Dates</fullName>
                </value>
                <value>
                    <fullName>Rush Request</fullName>
                </value>
                <value>
                    <fullName>New POC/Repeat Client</fullName>
                </value>
                <value>
                    <fullName>Reseller Project</fullName>
                </value>
                <value>
                    <fullName>Transitioned Account</fullName>
                </value>
                <value>
                    <fullName>Unresponsive Client</fullName>
                </value>
                <value>
                    <fullName>Cvent Event</fullName>
                </value>
                <value>
                    <fullName>Hospitality Cloud</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>SMM</fullName>
                </value>
                <value>
                    <fullName>Alliance Tech</fullName>
                </value>
                <value>
                    <fullName>Onsite Solutions</fullName>
                </value>
                <value>
                    <fullName>App build platinum</fullName>
                </value>
                <value>
                    <fullName>Data loading service</fullName>
                </value>
                <value>
                    <fullName>Custom Video 2 Minutes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Awards__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Awards</label>
        <referenceTo>New__c</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Intelligence_activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Intelligence activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is implemented for passkey project. Case# 10138493</description>
        <label>CSC Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Onboarding1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_notified_upon_completion__c</fullName>
        <label>CSC notified upon completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Center_created__c</fullName>
        <label>Call Center created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_center_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call center needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelled_Days_Count__c</fullName>
        <label>Cancelled Days Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_in_Call_Completed__c</fullName>
        <label>Check in Call Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_in_Call_Scheduled_On__c</fullName>
        <label>Check in Call Scheduled On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_in_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check in Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Deliverable_Due_Date__c</fullName>
        <inlineHelpText>Date client is to return workbook</inlineHelpText>
        <label>Client Deliverable Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Deliverable_sent__c</fullName>
        <inlineHelpText>Date that client was sent workbook</inlineHelpText>
        <label>Client Deliverable sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_confirmed_completion__c</fullName>
        <inlineHelpText>Client has advised there are no outstanding issues with onboarding</inlineHelpText>
        <label>Client confirmed completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_site_s_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client site(s) created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Days_Count__c</fullName>
        <label>Closed Days Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Onboarding5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Date_Check__c</fullName>
        <label>Completion Date Check</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completion_email_sent_internally__c</fullName>
        <inlineHelpText>Email sent to CSC and Training team from Case</inlineHelpText>
        <label>Completion email sent internally</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Connectivity_Testing_ended__c</fullName>
        <label>Connectivity Testing ended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Connectivity_Testing_started__c</fullName>
        <label>Connectivity Testing started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_MPCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create MPCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creation_Source_Dev__c</fullName>
        <description>This field will store value if this on boarding is being created from some code.</description>
        <label>Creation Source Dev</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Status_Days_Count__c</fullName>
        <formula>IF(
TODAY()-Status_Edit_Date__c =0,1,TODAY()- Status_Edit_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status Days Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cvent_Account_ID__c</fullName>
        <formula>Account_Name__r.Cvent_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cvent Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Account__c</fullName>
        <label>Cvent Account #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Migration__c</fullName>
        <label>Data Migration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Light</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Delayed_Launch__c</fullName>
        <formula>If(ISNULL(Actual_Launch_Date__c),null,Actual_Launch_Date__c - End_User_Ideal_Launch_Date__c)</formula>
        <label>Days Delayed (Launch)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>DATEVALUE(Completion_Date__c ) - (Kick_off_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_Last_Activity__c</fullName>
        <description>Requested by Sushil.
Case#: 08667787</description>
        <formula>Today() - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Event_Completion__c</fullName>
        <formula>Completion_Date__c - NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Event Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dont_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dont Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elearning_Sent__c</fullName>
        <label>Elearning Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Ideal_Launch_Date__c</fullName>
        <label>End-User Ideal Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enhancements__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enhancements</label>
        <referenceTo>Enhancement_Request__c</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_City__c</fullName>
        <description>Onsite Solution Field</description>
        <label>Event City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Code__c</fullName>
        <label>Event Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Completion_Date_Check__c</fullName>
        <label>Event Completion Date Check</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Completion_Date__c</fullName>
        <description>OnsiteSolution Field</description>
        <label>Event Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>Onsite Solution field</description>
        <label>Event Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <description>Onsiter Solution field</description>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_State__c</fullName>
        <description>Onsite Solution Field</description>
        <label>Event State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <description>Onsite Solution Field</description>
        <label>Event Venue</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Features__c</fullName>
        <label>Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a2z API</fullName>
                </value>
                <value>
                    <fullName>Activity Stream</fullName>
                </value>
                <value>
                    <fullName>App Security</fullName>
                </value>
                <value>
                    <fullName>Beacons</fullName>
                </value>
                <value>
                    <fullName>Click</fullName>
                </value>
                <value>
                    <fullName>Cvent API</fullName>
                </value>
                <value>
                    <fullName>Designer Layout</fullName>
                </value>
                <value>
                    <fullName>Enterprise - In House Distribution</fullName>
                </value>
                <value>
                    <fullName>Enterprise - Store Distribution</fullName>
                </value>
                <value>
                    <fullName>eTouches API</fullName>
                </value>
                <value>
                    <fullName>EventBrite API</fullName>
                </value>
                <value>
                    <fullName>Event Wall</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>Gamification</fullName>
                </value>
                <value>
                    <fullName>Graphics Work</fullName>
                </value>
                <value>
                    <fullName>Interactive Map</fullName>
                </value>
                <value>
                    <fullName>Lead Retrieval</fullName>
                </value>
                <value>
                    <fullName>Messaging</fullName>
                </value>
                <value>
                    <fullName>OnArrival</fullName>
                </value>
                <value>
                    <fullName>Partner API</fullName>
                </value>
                <value>
                    <fullName>Permission Groups</fullName>
                </value>
                <value>
                    <fullName>Polling</fullName>
                </value>
                <value>
                    <fullName>RegOnline API</fullName>
                </value>
                <value>
                    <fullName>Social Wall Premium</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>White Label</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Event_Launch_date__c</fullName>
        <label>First Event Launch date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flex_Training_Discussion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flex Training/Discussion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floor_Plans_Approved_Date__c</fullName>
        <label>Floor Plans Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Functional_Testing_Complete__c</fullName>
        <label>Hotel User Acceptance Testing Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Functional_Testing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel User Acceptance Testing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Onboarding (Functional Testing Contact)</relationshipLabel>
        <relationshipName>Onboarding2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Future_Activity_Date__c</fullName>
        <label>Future Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GLM_S_C_Integration__c</fullName>
        <label>GLM - S&amp;C Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delphi</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GLM_S_C_Integration_other__c</fullName>
        <label>GLM - S&amp;C Integration other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_CRS_Integration_Other__c</fullName>
        <label>GL - CRS Integration Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Integration__c</fullName>
        <description>This field is implemented for passkey project. Case# 10138493</description>
        <label>GL - CRS Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amadeus</fullName>
                </value>
                <value>
                    <fullName>Megasys</fullName>
                </value>
                <value>
                    <fullName>Par</fullName>
                </value>
                <value>
                    <fullName>ResortSuite</fullName>
                </value>
                <value>
                    <fullName>Epitome</fullName>
                </value>
                <value>
                    <fullName>Protel</fullName>
                </value>
                <value>
                    <fullName>Galaxy</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>VisualOne</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>HMS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reserve</fullName>
                </value>
                <value>
                    <fullName>LYNX</fullName>
                </value>
                <value>
                    <fullName>Carlson CRS</fullName>
                </value>
                <value>
                    <fullName>Dreams</fullName>
                </value>
                <value>
                    <fullName>Hilton CRS</fullName>
                </value>
                <value>
                    <fullName>Holidex</fullName>
                </value>
                <value>
                    <fullName>Marsha</fullName>
                </value>
                <value>
                    <fullName>Valhalla</fullName>
                </value>
                <value>
                    <fullName>Stellex</fullName>
                </value>
                <value>
                    <fullName>Curtis</fullName>
                </value>
                <value>
                    <fullName>Sabre</fullName>
                </value>
                <value>
                    <fullName>Opera-CRS</fullName>
                </value>
                <value>
                    <fullName>Travel Tripper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GL_Mode_Other__c</fullName>
        <label>GL Mode Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Mode__c</fullName>
        <label>GL Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-way</fullName>
                </value>
                <value>
                    <fullName>2-way</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GL_New_integration__c</fullName>
        <description>This field is implemented for passkey project. Case# 10138493</description>
        <label>GL - New integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Amadeus</fullName>
                </value>
                <value>
                    <fullName>Megasys</fullName>
                </value>
                <value>
                    <fullName>Par</fullName>
                </value>
                <value>
                    <fullName>ResortSuite</fullName>
                </value>
                <value>
                    <fullName>Epitome</fullName>
                </value>
                <value>
                    <fullName>Protel</fullName>
                </value>
                <value>
                    <fullName>Galaxy</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>VisualOne</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>HMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GL_New_integration_other__c</fullName>
        <label>GL - New integration other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Profile_setup_completed__c</fullName>
        <label>GL Profile setup completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GML_Integration_other__c</fullName>
        <label>GML - New Integration other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GML_New_integration__c</fullName>
        <label>GML - New integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Delphi</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>CRS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GML_S_C_Integration__c</fullName>
        <label>GML - S&amp;C Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Delphi</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>CRS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GML_S_C_Integration_other__c</fullName>
        <label>GML - S&amp;C Integration other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Scope__c</fullName>
        <label>Global Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_the_Installer_been_engaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has the Installer been engaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical_Data_Loaded_DDL__c</fullName>
        <label>Historical Data Loaded</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel_Added_to_Adaptor__c</fullName>
        <label>Hotel Added to Adaptor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Directory_activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotel Directory activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Information_Received__c</fullName>
        <inlineHelpText>Date client returned</inlineHelpText>
        <label>Hotel Information Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Listing_Review_doc_completed__c</fullName>
        <inlineHelpText>Screenshots of Initial hotel listing for customer review</inlineHelpText>
        <label>Hotel set-up review doc completed</label>
        <type>Date</type>
    </fields>
</CustomObject>